--- a/package.json
+++ b/package.json
@@ -16,15 +16,24 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.390.0",
-    "next": "14.2.3",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
+    "next": "^14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
